Wed Oct 14 16:56:50 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check for libunwind.h, which is not available in
	  very old OS X SDK.  [ruby-core:71080] [Bug #11591]

Wed Oct 14 14:11:42 2015  Brian Black  <bblack@veracode.com>

	* iseq.c (rb_insn_operand_intern): change kw in callinfo disasm from the
	  number of keyword arguments to an ordered list of the keywords used.
	  [Feature #11589]

Wed Oct 14 13:58:44 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_nextc): send a warning to ripper, not to STDERR
	  always.

	* parse.y (rb_warn1, rb_warning1): move argument conversions to
	  callers.  PRIsVALUE is not valid in String#%.

Wed Oct 14 13:37:23 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/racc/rdoc/grammar.en.rdoc: fix spell error.
	  [fix GH-1053][ci skip] Patch by @Matrixbirds

Tue Oct 13 22:06:50 2015  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c (rsock_fd_family): Check sa_len.

Tue Oct 13 12:14:10 2015  Craig Davison  <craig65535@gmail.com>

	* ext/socket/rsock_addrinfo (rsock_addrinfo): specify address
	  family.  [Fix GH-1052]

	* ext/socket/udpsocket.c (udp_connect, udp_bind, udp_send):
	  address family by the receiver.

Sun Oct 11 07:09:19 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_push_frame): initialize other than sp (and ep)
	  first for performance.

Sun Oct 11 06:21:50 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c, internal.h (rb_yield_1): added for performance which
	  doesn't check Qundef.

	* numeric.c (int_dotimes): use rb_yield_1.

Sun Oct 11 06:19:49 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_iseq_setup_normal): setup sp first
	  for performance.

Sun Oct 11 05:29:51 2015  Koichi Sasada  <ko1@atdot.net>

	* vm.c (invoke_block_from_c): split this function into several
	  functions.

	* vm_insnhelper.c (vm_yield_callee_setup_arg): remove this function
	  beacuse it is only delegation function.
